@@ -7,6 +7,8 @@
   o Fix a use of an uninitialized variable that would occur when Tor was
     already running when Vidalia started, and the "Start Tor when Vidalia
     Starts" checkbox is checked. (Ticket #443)
+  o Switch to using 'getinfo address-mappings' instead of
+    'getinfo addr-mappings'. (Ticket #454)
   o Backport a change that removes a verticalSpacing property from a .ui
     file, so Vidalia 0.1.x will still build on Qt 4.2. (Ticket #442)
 
